Mise à jours, dernières fonctions : suppression entités (en cours), dernières pages de création, edit, delete, mise à jours design

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -6,13 +6,15 @@
 @import 'partials/button';
 @import 'partials/base';
 @import 'partials/header';
+@import 'partials/user';
 @import 'partials/home';
 @import 'partials/module';
 @import 'partials/filter';
 @import 'partials/partner';
 @import 'partials/table';
+@import 'partials/show';
+@import 'partials/card';
 @import 'partials/footer';
-
 
 html, body {
   background-color: $black;
