--- a/assets/styles/partials/_module.scss
+++ b/assets/styles/partials/_module.scss
@@ -16,7 +16,7 @@
 }
 
 .module-title-hdr.entities {
-    margin-top: 2rem;
+    margin: 2rem;
     justify-content: center;
     flex-direction: column;
 }
