--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -1,9 +1,5 @@
 /* header */
 
-// .logo {
-//     font-size: 3rem;
-//     color: $white;
-// }
 .text-logo-hdr {
     font-size: 5rem;
     display: flex;
@@ -101,3 +97,15 @@ nav.container-nav
             opacity: 1;
             transform: translateY(0px);
         }
+
+.user-header {
+    margin: 2rem;
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.5rem;
+    font-family: 'Julius Sans One', sans-serif;
+}
+
+.logout {
+    text-decoration: none;
+}
