--- a/assets/styles/partials/_partner.scss
+++ b/assets/styles/partials/_partner.scss
@@ -7,6 +7,8 @@
 
 .title-entity.partner {
     margin-top: 1rem;
+    font-family: 'Julius Sans One', sans-serif;
+    color: $red;
 }
 
 .entity-text p {
