--- a/templates/mods/index.html.twig
+++ b/templates/mods/index.html.twig
@@ -1,54 +1,79 @@
 {% extends 'base.html.twig' %}
 
+{% block javascripts %}
+        {{ encore_entry_script_tags('moduleFilter') }}
+        {{ encore_entry_script_tags('moduleStatusFilter') }}
+		{{ parent() }}
+ {% endblock %}
+
 {% block title %}Modules{% endblock %}
 
 {% block body %}
+
+    {% include 'nav.html.twig' %}
+
     <header class="module-title-hdr entities">
         <h1 class="title-entity">Modules</h1>
+        <div class="module-info">
+            <p class="module-text partner-text"> 
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Libero odit ab est aliquid sapiente. 
+                Aut ipsum sunt id totam tempora, aspernatur est quisquam corrupti corporis, 
+                neque quasi ex quis consectetur.
+            </p>
+            <div class="status">
+                <p class="module-text entity-status"> {{ modules | length }} module(s) OptiSport au total </p>
+                <p class="module-text entity-status"> {{ activeModules | length}} module(s) OptiSport actif </p>
+            </div>
+            <div class="add-entity">
+                <a class="btn btn-outline-success btn-lg" href="{{ path('new_module') }}">Ajouter un module</a>
+            </div>
+           
+        </div>
     </header>
 
     <div class="home-hdr-sep"> 
     </div>
-    
+
     <section class="module template">
         <div class="module-content entity">
             <nav class="list-filters">
                 <h3>Filtres</h3>
                 <div class="row">
-                    <div class="col-sm-3">
-                        <div class="form-group">
-                            <label class="label">ID</label>
-                            <input type="text" class="form-control w100" placeholder="" />
-                        </div>
-                    </div>
-                    <div class="col-sm-6">
+                    <div class="col-sm-8">
                         <div class="form-group">
                             <label class="label">Nom Module</label>
                             <input type="text" class="form-control w100" placeholder="" />
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-sm-4">
                         <div class="form-group">
                             <label class="label">Statut Module</label>
                             <select class="form-control selectpicker" title="">
-                                <option>actif</option>
-                                <option>Inactif</option>
+                                <option value="1">actif</option>
+                                <option value="0">Inactif</option>
+                                <option value="all">Tous</option>
                             </select>
                         </div>
-                    </div>
-                </div>
-                <div class="form-submit">
-                    {# <div class="col-md-6">
-                        <button type="button" class="btn btn-outline-primary btn-lg btn-block" data-icon="reset" title="Remettre à zéro les filtres"><span class="icon"></span><span class="text">RAZ</span></button>
-                    </div> #}
-                    <div class="col-md-6 button-filter">
-                        <button type="button" class="btn btn-outline-success btn-lg btn-block" data-icon="search" title="Rechercher"><span class="icon"></span><span class="text">Rechercher</span></button>
                     </div>
                 </div>
             </nav>
 
             <div class="home-hdr-sep"> 
             </div>
+
+            {% for mod in modulesUnused %}
+                {% if not mod.template %}
+                {{ mod.name }}
+                {% endif %}
+            {% endfor %}
+
+             {# Object of class Doctrine\ORM\PersistentCollection could not be converted to string #}
+            {# {% for temp in templates %}
+                {% for mod in temp.modules %}
+                {{ temp.modules }}
+                {% endfor %}
+            {% endfor %} #}
 
             <h3 class="count-entity">{{ pluralize(modules|length, 'Module OptiSport', 'Modules OptiSport') }}</h3>
 
@@ -63,11 +88,8 @@
                         <th scope="col">Action</th>
                     </tr>
                     </thead>
-                    <tbody class="table-group-divider">
-                    {% for module in modules  %}
-                        {# {% for mod in partner.mods %}
-                                {{ dump(mod) }}
-                        {% endfor %} #}
+                    <tbody class="tbody-content table-group-divider">
+                    {% for module in modules %}
                         <tr>
                             <td scope="row"> {{ module.id }}</td>
                             <td> {{ module.name }}</td>
@@ -77,22 +99,28 @@
                             {% else %}
                                 <td>Inactif</td>
                             {% endif %}
-                            <td>
+                            <td class="moduleActions">
+                                {% if module.isActive %}
+                                    <button data-module="{{module.id}}" class="btn btn-outline-danger activateModule deactivate">Désactiver</button> 
+                                {% else %}
+                                    <button data-module="{{module.id}}" class="btn btn-outline-success activateActivate activate">Activer</button> 
+                                {% endif %}
                                 <a class="btn btn-outline-success" href="{{ path('edit_module', {id: module.id}) }}">Modifier</a>
-                                <a class="btn btn-outline-danger" href="{{ path('edit_module', {id: module.id}) }}">Supprimer</a>
+                                <div>
+                                    {{ include('mods/_delete_form.html.twig') }}
+                                </div>
                             </td>
                         </tr>
                     {% endfor %}
                     </tbody>
+
+                    <tbody class="tbody-show-results table-group-divider">
+                    </tbody>
+
                 </table>
             </div>
-
-            <div class="table-sep "> 
-            </div>
-
-            <div class="add-entity">
-                <a class="btn btn-outline-success btn-lg" href="{{ path('new_module') }}">Ajouter un module</a>
-            </div>
         </div>
+
+        
     </section><!-- /.module.projects -->
 {% endblock %}
