--- a/templates/structure/edit.html.twig
+++ b/templates/structure/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Partenaire{% endblock %}
+{% block title %}Structure{% endblock %}
 
 {% block body %}
 
